--- a/includes/style.css
+++ b/includes/style.css
@@ -5,7 +5,7 @@
 *{
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     box-sizing: border-box;
 }
 
@@ -14,33 +14,98 @@ body{
     color: whitesmoke;
 }
 
+#background1{
+    position: absolute;
+    left: 100vw;
+    transform:  translate(-31.4vw,7vh) scale(1.5);
+    z-index: -1;
+}
+
 nav{
     display: flex;
     justify-content: center;
-    gap:20px;
-    margin: 1em 0;
+    gap:60px;
+    margin: 2em 0;
 }
 
 nav a{
+    display: inline;
     text-decoration: none;
     color:whitesmoke;
-    font-size: 18px;
+    font-size: 20px;
+    transition-duration: .7s;
+    padding:.3em .8em;
+    border-radius: 100px;
 }
 
 nav a:hover{
     text-decoration: underline;
+    background-color: gray;
+    border-radius: 20px;
+
 }
 
 #presentation{
     border: 1px solid beige;
     margin: 5vh auto 0 auto;
     width: 80%;
+    font-size: 18px;
+}
+
+#contactForm{
+    position: absolute;
+    display: none;
+    width: 30%;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    backdrop-filter: blur(20px);
+}
+
+#contactForm form{
+    border: 1px solid greenyellow;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: auto;
+    width: 100%;
+    padding: 1%;
+}
+
+#contactForm #fermerFormBtn{
+    margin: auto;
+    padding: .7em .5em;
+    border: 1px solid black;
+    border-radius: 20px;
+    width: max-content;
+    color: black;
+    background-color: aliceblue;
+    font-size: 18px;
+    font-weight: bolder;
+    cursor: pointer;
+}
+
+#contactForm form input,#contactForm form textarea{
+    padding: .5em ;
+    font-size: 1.1em;
+    text-decoration: none;
+    outline: none;
+}
+
+#contactForm form input:focus,#contactForm form textarea:focus{
+    outline: 5px solid black;
+
+}
+
+#contactForm form input[type='submit']{
+    width: 50%;
+    margin: auto;
 }
 
 #informations{
     display: flex;
     justify-content: center;
     margin: auto;
+    margin-bottom: 5em;
     width: 95%;
     height: 70vh;
     margin-top: 5vh;
@@ -150,10 +215,17 @@ nav a:hover{
 }
 
 footer{
-    position:absolute;
-    margin-top: 10vh;
-    transform: translateY(-50%);
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    color: white;
+    font-size: 1.2em;    
     background-color: #222;
     width: 100%;
-    min-height: 5em;
+    min-height: 8em;
+}
+
+footer a{
+    color:white;
 }
