Modif style et script JS

--- a/includes/style.css
+++ b/includes/style.css
@@ -117,7 +117,8 @@ nav a:hover{
     border: 1px solid green;
     width: 60%;
     background-color: aliceblue;
-    background-image: url(images/imageDefaut.jpg);
+    background-image: url(https://source.unsplash.com/random/900×700/?spa,detente);
+    background-color: #333;
     background-repeat: no-repeat;
     background-position: 50% 30%;
     background-size: cover;
