--- a/includes/style.css
+++ b/includes/style.css
@@ -2,16 +2,21 @@
     font-family:arrow;
     src: url(font/arrow/Arrows.ttf);
 }
-*{
+*,::before,::after{
     margin: 0;
     padding: 0;
-    /* overflow-x: hidden; */
     box-sizing: border-box;
+}
+
+:root{
+    --textColor:#ffffff;
+    --textColorHover:#00ffff;
+    --borderColor:#00ffff;
 }
 
 body{
     background-color: #333;
-    color: whitesmoke;
+    color: var(--textColor);
 }
 
 /* nav{
@@ -39,7 +44,7 @@ nav a:hover{
 } */
 
 #presentation{
-    border: 1px solid beige;
+    border: 1px solid var(--borderColor);
     margin: 2vh auto 0 auto;
     width: 80%;
     font-size: 18px;
@@ -49,7 +54,7 @@ nav a:hover{
 #contactForm{
     position: absolute;
     display: none;
-    top: 50vh;
+    top: 51.8vh;
     width: 30%;
     margin-left: 30%;
     transform: translate(-50%,-50%);
@@ -57,20 +62,20 @@ nav a:hover{
 }
 
 #contactForm form{
-    border: 1px solid black;
+    border: 1.3px solid var(--borderColor);
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     gap: 10px;
     margin: auto;
     width: 100%;
-    padding: 1%;
+    padding: 1% 3%;
 }
 
 #contactForm #fermerFormBtn{
     margin: auto;
     padding: .7em .5em;
-    border: 1px solid black;
+    border: 1.3px solid var(--borderColor);
     border-radius: 20px;
     width: max-content;
     color: black;
@@ -86,16 +91,36 @@ nav a:hover{
     text-decoration: none;
     outline: none;
     font-size: 18px;
-    background-color: rgba(200, 200,200, .9);
+    background-color: rgba(150,150,150, .7);
+    border: 1.5px solid var(--borderColor);
 }
 
 #contactForm form input:focus,#contactForm form textarea:focus{
-    outline: 1.5px solid black;
+    border: 1.5px solid var(--borderColor);
 }
 
 #contactForm form input[type='submit']{
     width: 50%;
+    font-size: 20px;
     margin: auto;
+    transition-duration: .7s;
+}
+
+#contactForm form:invalid input[type='submit']{
+    background-color:rgba(150, 150, 150, 0.5);
+    color: black;
+    -webkit-text-stroke: 1px black ;
+    transition-duration: .7s;
+}
+
+#contactForm form:valid input[type='submit']{
+    background-color: var(--borderColor);
+    color: white;
+    -webkit-text-stroke: 1px white ;
+}
+
+#contactForm ::placeholder{
+    color: black;
 }
 
 #informations{
@@ -109,7 +134,7 @@ nav a:hover{
 }
 
 #informations #image{
-    border-right: 2px solid #111;
+    border: 2px solid var(--borderColor);
     width: 60%;
     background-color: aliceblue;
     background-image: url(images/imageDefaut.jpg);
@@ -143,7 +168,7 @@ nav a:hover{
 .cadrePresta .prestationsBouton .menu{
     display: block;
     background-color: #555;
-    border: 2px solid black;
+    border: 2px solid var(--borderColor);
     padding: .2em;
     width: 100%;
     cursor: pointer;
@@ -162,7 +187,7 @@ nav a:hover{
 }
 
 .cadrePresta .prestationsBouton .menu:hover{
-    color: aquamarine;
+    color: var(--textColorHover);
 }
 
 .cadrePresta .prestationsBouton .fleche{
@@ -177,7 +202,7 @@ nav a:hover{
 }
 
 .cadrePresta .prestationsBouton .menu.active{
-color: aquamarine;
+color: var(--textColorHover);
 }
 
 .cadrePresta .prestationsBouton .menu.active .fleche{
@@ -187,10 +212,11 @@ color: aquamarine;
 .cadrePresta .prestationsBouton .content{
     display:flex;
     flex-direction: column;
-    border: 1.5px solid #111;
+    border: 1.5px solid var(--borderColor);
     margin: .5em;
     padding: .5em;
     text-align: left;
+    font-size: 18px;
 }
 
 .cadrePresta .prestationsBouton .content .prestaBas{
@@ -199,18 +225,18 @@ color: aquamarine;
     justify-content: space-evenly;
     margin-top: 1em;
     padding-top: 1em;
-    border-top: 2px solid black;
+    border-top: 2px solid var(--borderColor);
 }
 
 .cadrePresta .prestationsBouton .content .prestaBas span{
     font-size: 18px;
+    animation: animate 2s infinite;
 }
 
 .cadrePresta .prestationsBouton .content .prestaBas span:hover{
     cursor:pointer;
     text-decoration: none;
     font-size: 18px;
-    animation: animate 2s infinite;
 }
 
 @keyframes animate {
@@ -237,6 +263,7 @@ footer{
     background-color: #222;
     width: 100%;
     min-height: 3.4em;
+    border-top: 1px solid var(--borderColor);
 }
 
 footer a{
